# skillforge

./: BOM.md  Cargo.toml  PRD.md  README.md  TDD.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
src/: app.rs  config.rs  main.rs  types.rs
src/providers/: claude.rs  gemini.rs  mod.rs  openai.rs  openrouter.rs
src/services/: mod.rs  path_scanner.rs  skill_store.rs
src/ui/: mod.rs
