[package]
name = "skillforge"
version = "0.1.0"
edition = "2021"
rust-version = "1.86.0"
description = "AI-powered CLI skill generator with terminal UI"
license = "MIT"

[[bin]]
name = "skillforge"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
which = "6"
directories = "5"
arboard = "3"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
futures-util = "0.3"
unicode-width = "0.1"
